--- a/client/index.html
+++ b/client/index.html
@@ -8,9 +8,11 @@
   <meta name="description" content="Paymart - An e-commerce platform">
   <meta name="author" content="Stanley ye">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="assets/stylesheets/style.css">
 </head>
 <body>
-<h1>Main page</h1>
-  <script src="js/scripts.js"></script>
+  <h1>Main page</h1>
+  <h2>Hello world!</h2>
+  <div id="react"></div>
+  <script src="/build/bundle.js"></script>
 </body>
