--- a/client/index.html
+++ b/client/index.html
@@ -11,8 +11,7 @@
   <link rel="stylesheet" href="assets/stylesheets/style.css">
 </head>
 <body>
-  <h1>Main page</h1>
-  <h2>Hello world!</h2>
-  <div id="react"></div>
+	<h1>Index page</h1>
+  <div id="root"></div>
   <script src="/build/bundle.js"></script>
 </body>
